Changes in map zoom-container style to prevent horizontal scroll

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ select{
   height: 600px;
   position: relative;
   margin: auto;
+  max-width: 100%;
 }
 
 .map__pin {
